Fix whitespace issue and update lunch text

--- a/src/app/components/storyBookComponents/cards/planCarouselCard/planCarouselCard.css
+++ b/src/app/components/storyBookComponents/cards/planCarouselCard/planCarouselCard.css
@@ -13,6 +13,7 @@
     padding-bottom: 0;
     margin: 0;
     color: var(--color-primary);
+    white-space: wrap;
 }
 
 /* .planCarouselCard img {
